@@ -1,7 +1,7 @@
 /*
     View Member Functions
 
-    Copyright (C) 2004-2014 Ruven Pillay.
+    Copyright (C) 2004-2015 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -160,7 +160,7 @@ bool View::viewPortSet() {
 unsigned int View::getViewLeft(){
   // Scale up our view to a real pixel value.
   // Note that we calculate from our full resolution image to avoid errors from the rounding at each resolution size
-  unsigned int l = round( width*view_left/pow(2.0, max_resolutions-resolution-1) );
+  unsigned int l = round( width*view_left/(2 << (max_resolutions-resolution-1)) );
   return l;
 }
 
@@ -168,7 +168,7 @@ unsigned int View::getViewLeft(){
 unsigned int View::getViewTop(){
   // Scale up our view to a real pixel value
   // Note that we calculate from our full resolution image to avoid errors from the rounding at each resolution size
-  unsigned int t = round( height*view_top/pow(2.0, max_resolutions-resolution-1) );
+  unsigned int t = round( height*view_top/(2 << (max_resolutions-resolution-1)) );
   return t;
 }
 
@@ -176,7 +176,7 @@ unsigned int View::getViewTop(){
 unsigned int View::getViewWidth(){
 
   // Scale up our viewport, then make sure our size is not too large or too small
-  unsigned int rw = width / pow(2.0, max_resolutions-resolution-1);
+  unsigned int rw = width / (2 << (max_resolutions-resolution-1));
   unsigned int w = round( view_width*rw );
   unsigned int left = (unsigned int) round( view_left*rw );
 
@@ -189,7 +189,7 @@ unsigned int View::getViewWidth(){
 unsigned int View::getViewHeight(){
 
   // Scale up our viewport, then make sure our size is not too large or too small
-  unsigned int rh = height / pow(2.0, max_resolutions-resolution-1);
+  unsigned int rh = height / (2 <<  (max_resolutions-resolution-1));
   unsigned int h = (unsigned int) round( view_height*rh );
   unsigned int top = (unsigned int) round( view_top*rh );
 
